--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,7 @@
     color: #9aa6ca;
 }
 
-.toggler_color{
-    /* background-color: aliceblue; */
-}
+
 
 .button_color{
     background-color: #9aa6ca;
@@ -39,7 +37,7 @@
 }
 
 #main-body{
-    background-image: url(images/code.avif);
+    background-image: url(/images/code.avif);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -67,7 +65,7 @@
 
 @media(min-width:576px){
     #main-body{
-        background-image: url(images/code.avif);
+        background-image: url(/images/code.avif);
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -77,7 +75,7 @@
 
 @media(min-width:1024px){
     #main-body{
-        background-image: url(images/code.avif);
+        background-image: url(/images/code.avif);
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
